--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,8 +1,9 @@
 @import "vars"
+@import "fonts"
 
 
 body
-    font-family: sans-serif
+    +reg
 
 img
     max-width: 100%
@@ -40,6 +41,7 @@ img
         text-decoration: none
         display: block
         margin-top: 5px
+        +bold
     &__button
         padding: 18px 48px
         border-radius: 10px
@@ -50,6 +52,7 @@ img
     background-color: $buttons
     color: $accent
     border: none
+    +bold
 
 .main
     background-color: $grey
@@ -69,6 +72,7 @@ img
             padding-right: 200px
             line-height: 55px
             margin: 40px 0 20px 0
+            +bold
             @media (max-width: 1200px)
                 padding-right: 10px
             @media (max-width: 640px)
