--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,6 +1,8 @@
 @import "vars"
 @import "fonts"
 
+*
+    box-sizing: border-box
 
 body
     +reg
@@ -51,9 +53,20 @@ img
 .button
     background-color: $buttons
     color: $accent
+    padding: 18px 48px
+    border-radius: 10px
     border: none
     +bold
+    cursor: pointer
+    &:hover
+        background-color: lighten($buttons, 20%)
 
+.input 
+    border: 1px solid $border-input
+    border-radius: 10px
+    padding: 25px
+    font-size: 20px 15px
+    
 .main
     background-color: $grey
     &-block
@@ -100,6 +113,8 @@ img
             margin-bottom: 20px
             @media (max-width: 640px)
                 margin-bottom: 15px
+            &:last-child
+                margin-bottom: 0
         &__image
             width: 40px
             height: 40px
@@ -117,3 +132,56 @@ img
             @media (max-width: 640px)
                 font-size: 12px
                 max-width: 250px
+
+.offer
+    padding: 90px 0
+    background: url('../img/offer-bg.jpg') no-repeat
+    background-position: center right
+    background-size: contain
+    position: relative
+    @media (max-width: 1200px)
+        background-size: cover
+    @media (max-width: 768px)
+        background: #fff
+    &::before
+        content: ''
+        width: 50%
+        height: 100%
+        position: absolute
+        background-color: #fff
+        top: 0
+        left: 0
+    &-block
+        width: 50%
+        padding-right: 90px
+        position: relative
+        @media (max-width: 768px)
+            width: 100%
+            padding-right: 0
+    &-title
+        font-size: 24px
+        line-height: 35px
+        max-width: 340px
+        margin-bottom: 25px
+        +bold
+    &-subtitle
+        display: inline-block
+        font-size: 16px
+        max-width: 260px
+        margin-bottom: 30px
+    &__input
+        margin-bottom: 30px
+        width: 240px
+        @media (max-width: 1200px)
+            width: 100%
+            margin-bottom: 15px
+        &:first-child
+            margin-right: 10px
+        
+    &__button
+        width: 100%
+        min-height: 70px
+        @media (max-width: 1200px)
+            font-size: 13px
+        @media (max-width: 768px)
+            font-size: 16px
