--- a/src/css/style.css
+++ b/src/css/style.css
@@ -40,6 +40,36 @@ img {
   }
 }
 
+.button {
+  background-color: #ffd200;
+  color: #333;
+  padding: 18px 48px;
+  border-radius: 10px;
+  border: none;
+  font-family: 'Museo Sans Bold', sans-serif;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: #ffe466;
+}
+
+.input {
+  border: 1px solid #dddddd;
+  border-radius: 10px;
+  padding: 25px;
+  font-size: 20px 15px;
+}
+
+.section-title {
+  font-size: 30px;
+  font-family: 'Museo Sans Bold', sans-serif;
+  font-weight: 700;
+  text-align: center;
+  line-height: 45px;
+}
+
 .header {
   padding: 20px 0;
 }
@@ -104,28 +134,6 @@ img {
   border-radius: 10px;
   margin-left: 30px;
   font-size: 13px;
-}
-
-.button {
-  background-color: #ffd200;
-  color: #333;
-  padding: 18px 48px;
-  border-radius: 10px;
-  border: none;
-  font-family: 'Museo Sans Bold', sans-serif;
-  font-weight: 700;
-  cursor: pointer;
-}
-
-.button:hover {
-  background-color: #ffe466;
-}
-
-.input {
-  border: 1px solid #dddddd;
-  border-radius: 10px;
-  padding: 25px;
-  font-size: 20px 15px;
 }
 
 .main {
@@ -403,6 +411,37 @@ img {
   font-family: 'Museo Sans Bold', sans-serif;
   font-weight: 700;
   font-weight: 400;
+}
+
+.portfolio {
+  padding: 100px 0;
+  background: #f5f5f5 url("../img/portfolio-bg.png") left repeat-y;
+  background-size: 50%;
+}
+
+.portfolio__title {
+  margin-bottom: 100px;
+  color: #333;
+}
+
+.portfolio__arrows {
+  max-width: 120px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: auto;
+  margin-top: 70px;
+}
+
+.arrows__left, .arrows__right {
+  cursor: pointer;
+}
+
+.slider__image {
+  margin: auto;
 }
 
 .modal {
