--- a/src/css/style.css
+++ b/src/css/style.css
@@ -70,6 +70,13 @@ img {
   line-height: 45px;
 }
 
+.section-subtitle {
+  color: #000;
+  font-size: 20px;
+  text-align: center;
+  display: block;
+}
+
 .header {
   padding: 20px 0;
 }
@@ -442,6 +449,117 @@ img {
 
 .slider__image {
   margin: auto;
+}
+
+.price {
+  padding: 100px 0;
+}
+
+.price__title {
+  margin-bottom: 60px;
+}
+
+.price__subtitle {
+  margin-bottom: 60px;
+}
+
+.price__card {
+  margin-bottom: 30px;
+}
+
+.cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.card {
+  text-align: center;
+  border: 1px solid #e8e8e8;
+  -webkit-transition: .2s;
+  transition: .2s;
+}
+
+@media (max-width: 768px) {
+  .card {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.card:hover {
+  -webkit-box-shadow: 0 20px 25px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 20px 25px rgba(0, 0, 0, 0.1);
+}
+
+.card:hover .card__img::before {
+  opacity: 1;
+  -webkit-transition: .2s;
+  transition: .2s;
+}
+
+.card__text {
+  padding: 40px;
+}
+
+.card__title {
+  margin-top: 0;
+  font-size: 18px;
+  margin-bottom: 30px;
+}
+
+.card__img {
+  position: relative;
+}
+
+.card__img img {
+  display: block;
+}
+
+.card__img::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#ffd200), to(rgba(255, 255, 255, 0)));
+  background-image: linear-gradient(to top, #ffd200 0%, rgba(255, 255, 255, 0) 100%);
+  opacity: 0;
+}
+
+.card__link {
+  display: inline-block;
+  font-family: 'Museo Sans Bold', sans-serif;
+  font-weight: 700;
+  text-decoration: none;
+  color: #333;
+  position: relative;
+}
+
+.card__link:hover::after {
+  height: 13px;
+}
+
+.card__link::after {
+  content: '';
+  z-index: -1;
+  display: block;
+  position: absolute;
+  bottom: -4px;
+  left: 0px;
+  width: 100%;
+  height: 3px;
+  background-color: #ffd200;
+  -webkit-transition: .2s;
+  transition: .2s;
 }
 
 .modal {
