--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -40,6 +40,12 @@ img
     text-align: center
     line-height: 45px
 
+.section-subtitle
+    color: #000
+    font-size: 20px
+    text-align: center
+    display: block
+
 .header
     padding: 20px 0
     &-block
@@ -234,6 +240,72 @@ img
         
 .slider__image
     margin: auto
+
+.price
+    padding: 100px 0
+    &__title
+        margin-bottom: 60px
+    &__subtitle
+        margin-bottom: 60px
+    &__card
+        margin-bottom: 30px
+
+.cards
+    display: flex
+    flex-wrap: wrap
+    justify-content: space-between
+.card
+    text-align: center
+    border: 1px solid $border-card
+    transition: .2s
+    @media (max-width: 768px)
+                flex-direction: column
+    &:hover
+        box-shadow: 0 20px 25px rgba(0, 0, 0, 0.1)
+        .card__img::before
+            opacity: 1
+            transition: .2s
+
+    &__text
+        padding: 40px
+    &__title
+        margin-top: 0
+        font-size: 18px
+        margin-bottom: 30px
+    &__img
+        position: relative
+        img
+            display: block
+        &::before
+            content: ''
+            position: absolute
+            left: 0
+            top: 0
+            width: 100%
+            height: 100%
+            background-image: linear-gradient(to top, #ffd200 0%, rgba(255, 255, 255, 0) 100%)
+            opacity: 0
+            
+    &__link
+        display: inline-block
+        +bold
+        text-decoration: none
+        color: $accent
+        position: relative
+        &:hover
+            &::after
+                height: 13px
+        &::after
+            content: ''
+            z-index: -1
+            display: block
+            position: absolute
+            bottom: -4px
+            left: 0px
+            width: 100%
+            height: 3px
+            background-color: $main-color
+            transition: .2s
 
 .modal
     position: fixed
