--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -254,6 +254,8 @@ img
     display: flex
     flex-wrap: wrap
     justify-content: space-between
+    @media (max-width: 768px)
+                justify-content: center
 .card
     text-align: center
     border: 1px solid $border-card
