--- a/src/sass/_vars.sass
+++ b/src/sass/_vars.sass
@@ -1,6 +1,7 @@
 $accent: #333
 $buttons: #ffd200
 $main-color: #ffd200
+$second: #ffc000
 $grey: #f5f5f5
 $border-input: #dddddd
 $border-card: #e8e8e8
