--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -309,6 +309,64 @@ img
             background-color: $main-color
             transition: .2s
 
+.steps
+    padding-bottom: 120px
+    &__title
+        margin-bottom: 60px
+    &__subtitle
+        margin-bottom: 75px
+
+.icons
+    display: flex
+    justify-content: space-between
+
+.icon
+    text-align: center
+    position: relative
+    &:last-child
+        &::after
+            display: none
+    &::after
+        content: ''
+        top: -10px
+        right: -95px
+        position: absolute
+        display: block
+        width: 72px
+        height: 25px
+        background-image: url('../img/arrow-bounce.png')
+    &__image
+        margin: auto
+        width: 100px
+        height: 100px
+        border: 3px solid #ffd200 
+        background-color: #fff
+        border-radius: 100px
+        display: flex
+        justify-content: center
+        align-items: center
+        margin-bottom: 30px
+        img 
+            width: 30px
+            height: 30px
+            display: inline-block
+    &__text
+        max-width: 140px
+        display: inline-block
+        font-size: 14px
+        line-height: 20px
+
+.notice
+    background-color: $second
+    padding: 100px 0
+    &__text
+        line-height: 50px
+        text-align: center
+        font-size: 32px
+        max-width: 750px
+        margin: auto
+        font-weight: 300
+
 .modal
     position: fixed
     left: 0
