--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -367,6 +367,150 @@ img
         margin: auto
         font-weight: 300
 
+.info
+    padding: 100px
+    &__block
+        margin-bottom: 150px
+
+.benefits
+    display: flex
+    justify-content: space-between
+
+.benefit
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+    background-color: $benefit-bg
+    height: 410px
+    max-width: 370px
+    position: relative
+    &__text
+        margin: 26px 80px 0 26px
+        font-size: 16px
+        line-height: 23px
+        strong
+            +bold
+    &__image
+        position: absolute
+        bottom: 0
+        left: 0
+
+.documents__title
+    margin-bottom: 100px
+
+.documents-block
+    display: flex
+    justify-content: space-between
+    &__text
+        text-align: center
+        margin-top: 40px
+        line-height: 24px
+        font-size: 18px
+
+.brief
+    background-image: url(../img/brief-color-bg.jpg), url('../img/brief-bg.jpg')
+    background-position: left center, center right
+    background-size: 50%, cover
+    background-repeat: repeat-y, no-repeat
+    padding: 100px 0
+    @media (max-width: 768px)
+        background-image: url(../img/brief-color-bg.jpg), url('../img/brief-bg.jpg')
+        background-position: top center, bottom right
+        background-size: 100% 50%, cover
+        background-repeat: repeat-x, no-repeat
+        padding: 50px 0
+    &-block
+        display: flex
+        @media (max-width: 768px)
+            flex-direction: column
+    &__interview
+        flex-basis: 50%
+    &__form
+        flex-basis: 50%
+        padding-left: 200px
+        text-align: center
+        @media (max-width: 1200px)
+            padding-left: 30px
+        @media (max-width: 768px)
+            padding-left: 0
+    &__input
+        width: 100%
+        max-width: 370px
+        margin-bottom: 15px
+    &__button
+        width: 100%
+        max-width: 370px
+        display: block
+        height: 70px
+        margin: 15px auto 30px auto    
+
+.interview
+    padding-right: 70px
+    @media (max-width: 1200px)
+        padding-right: 30px
+    &__title
+        +bold
+        font-size: 22px
+        line-height: 33px
+        margin-bottom: 50px
+        @media (max-width: 1200px)
+            font-size: 18px
+            margin-bottom: 40px
+    &__subtitle
+        font-size: 16px
+        margin-bottom: 100px
+        display: block
+        @media (max-width: 1200px)
+            font-size: 14px
+            margin-bottom: 30px
+    &-list
+        list-style-type: none
+        padding: 0
+        &__item
+            display: flex
+            align-items: center
+            margin-bottom: 25px
+            +bold
+        &__counter
+            width: 35px
+            height: 35px
+            border: 2px solid $text-color
+            border-radius: 50px
+            display: inline-block
+            text-align: center
+            line-height: 35px
+            margin-right: 30px
+            font-size: 14px
+            @media (max-width: 1200px)
+                margin-right: 20px
+        &__text
+            max-width: 400px
+            font-size: 18px
+            @media (max-width: 1200px)
+                font-size: 14px
+                max-width: 300px
+
+.form
+    &__title
+        +bold
+        font-size: 22px
+        line-height: 33px
+        margin-bottom: 50px
+        @media (max-width: 1200px)
+            font-size: 30px
+            margin-bottom: 40px
+            margin-top: 150px
+    &__subtitle
+        font-size: 16px
+        margin-bottom: 50px
+        display: block
+        @media (max-width: 1200px)
+            font-size: 14px
+            margin-bottom: 40px
+    &__description
+        font-size: 15px
+    
+
 .modal
     position: fixed
     left: 0
